<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <!-- Include the custom toolbar layout -->
    <include
        layout="@layout/main_activity_toolbar"
        android:id="@+id/toolbar"/>

    <!-- ImageView for displaying a GIF -->
    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_carousel" />

    <!-- Parent RelativeLayout for content below the toolbar -->
    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <!-- Sub RelativeLayout for positioning the headline text -->
        <RelativeLayout
            android:id="@+id/Headline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp">

            <!-- First line of the headline -->
            <TextView
                android:id="@+id/reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_nyour_nultimate"
                android:fontFamily="@font/krona"
                android:textColor="@color/white"
                android:textSize="32sp"/>

            <!-- Second line of the headline -->
            <TextView
                android:layout_below="@id/reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space_nadventure"
                android:fontFamily="@font/krona"
                android:textColor="@color/pink_grad_start"
                android:textSize="32sp"/>
        </RelativeLayout>

        <!-- Button for initiating an action -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_button"
            android:backgroundTint="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/let_s_go"
            android:fontFamily="@font/krona"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="18sp"/>
    </RelativeLayout>
</RelativeLayout>
