<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    tools:context=".ui.public_tour_activity.fragments.ui.RoundTripFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:elevation="12dp"
                app:cardBackgroundColor="#5E000000"
                app:cardCornerRadius="24dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:padding="24dp">

                    <LinearLayout
                        android:id="@+id/place_pick_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="48dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/from"
                                android:textColor="#676767"
                                android:fontFamily="@font/krona"
                                android:textSize="16sp" />


                            <TextView
                                android:id="@+id/departure_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/empty"
                                android:fontFamily="@font/krona"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:drawableEndCompat="@drawable/baseline_edit_24" />

                            <TextView
                                android:id="@+id/depature_pannet_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/empty"
                                android:textColor="#676767"
                                android:fontFamily="@font/krona"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="48dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/to"
                                android:textColor="#676767"
                                android:textSize="16sp"
                                android:fontFamily="@font/krona"/>

                            <TextView
                                android:id="@+id/arrival_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/empty"
                                android:fontFamily="@font/krona"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:drawableEndCompat="@drawable/baseline_edit_24" />

                            <TextView
                                android:id="@+id/arrival_planet_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="---"
                                android:fontFamily="@font/krona"
                                android:textColor="#676767"
                                android:textSize="16sp" />

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/title_travel_dates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/place_pick_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:text="TRAVEL DATES"
                        android:fontFamily="@font/krona"
                        android:textColor="#676767"/>

                    <LinearLayout
                        android:id="@+id/date_pick_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_travel_dates"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/departure_date_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="---"
                                android:fontFamily="@font/krona"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:drawableEndCompat="@drawable/baseline_edit_24" />

                            <TextView
                                android:id="@+id/depature_date_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="---"
                                android:fontFamily="@font/krona"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="48dp"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/arrival_date_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="---"
                                android:fontFamily="@font/krona"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:drawableEndCompat="@drawable/baseline_edit_24" />

                            <TextView
                                android:id="@+id/arrival_date_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="---"
                                android:fontFamily="@font/krona"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passengers"
                android:fontFamily="@font/krona"
                android:textColor="@color/white"
                android:layout_below="@id/header_layout"
                android:id="@+id/title_passenger"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/pasenger_pick_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/title_passenger"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <NumberPicker
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@drawable/number_picker_background_left"
                        android:id="@+id/adults_picker"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/adult_12"
                        android:fontFamily="@font/lexendexa"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12sp"
                        android:layout_marginTop="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <NumberPicker
                        android:id="@+id/child_picker"
                        android:layout_width="match_parent"
                        android:background="@drawable/number_picker_background"
                        android:layout_height="120dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/child_2"
                        android:textSize="12sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/lexendexa"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <NumberPicker
                        android:id="@+id/infant_picker"
                        android:layout_width="match_parent"
                        android:background="@drawable/number_picker_background_right"
                        android:layout_height="120dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/infant"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/lexendexa"
                        android:textSize="12sp"
                        android:layout_marginTop="15dp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CLASS"
                android:id="@+id/title_class"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/pasenger_pick_layout"
                android:fontFamily="@font/krona"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/class_pick_card"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:elevation="12dp"
                app:cardCornerRadius="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="48dp"
                app:cardBackgroundColor="#70000000"
                android:layout_below="@+id/title_class">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="24dp">

                    <RadioGroup
                        android:id="@+id/class_choice_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical">


                        <RadioButton
                            android:id="@+id/choice1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexendexa"
                            android:text="@string/celestial_luxe"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/choice2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexendexa"
                            android:text=" Galactic Premier"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/choice3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexendexa"
                            android:text="Stellar Elegance"
                            android:textColor="@color/white" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/class_details_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/class_choice_radio_group"
                        android:layout_centerHorizontal="true"
                        android:text="Class Details"
                        android:fontFamily="@font/lexendexa"
                        android:textSize="12sp"
                        android:textColor="#9708CC">

                    </TextView>

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/class_pick_card"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="12dp"
                android:paddingEnd="24dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="18sp"
                android:backgroundTint="@color/black"
                android:text="@string/next"
                android:fontFamily="@font/krona"/>



        </RelativeLayout>


    </ScrollView>



</FrameLayout>